# Petal

./: .gitignore  Cargo.toml  DEVOPMENT.md  README.md  build.u  petal.u
src/: config.rs  debug.rs  flags.rs  main.cpp  main.rs
src/back/: codegen.rs  mod.rs  target.rs
src/front/: ast.rs  lexer.rs  mod.rs  parser.rs  semantic.rs  token.rs
src/front/nodes/: body.rs  branching.rs  cast.rs  expr.rs  function.rs  id.rs  loops.rs  mod.rs  node.rs  operator.rs  parameter.rs  range.rs  scopes.rs  statement.rs  type.rs  variables.rs
src/generator/: generator.cpp  generator.hpp
src/headers/: ast.hpp  token.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/middle/: ir.rs  mod.rs  spill.rs
src/parser/: parser.cpp  parser.hpp
test/: main.lts  test.lts
